2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* ValaLanguageBinding.cs: Ordinal compare.

	* Project/ValaProjectBinding.cs: Only create projects for vala
	  files. Fixes nasty crash on xml files.

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* ValaBinding.csproj: Remove bad property value.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* ValaBinding.sln: Flush.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* ValaBinding.csproj: Flush.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* ValaBinding.sln: Set policies. Remove unused name attribute.

2009-02-20  Lluis Sanchez Gual  <lluis@novell.com>

	* ValaBinding.csproj: Updated references.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * ValaBinding.mds:
 * ValaBinding.sln:
 * ValaBinding.mdp:
 * ValaBinding.csproj: Migrated to MSBuild file format.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * configure.in:
 * AssemblyInfo.cs:
 * ValaBinding.addin.xml: Bump MD version.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * ValaBinding.mds:
 * gtk-gui/generated.cs:
 * gtk-gui/MonoDevelop.ValaBinding.AddPathDialog.cs:
 * gtk-gui/MonoDevelop.ValaBinding.PackageDetails.cs:
 * gtk-gui/MonoDevelop.ValaBinding.AddLibraryDialog.cs:
 * gtk-gui/MonoDevelop.ValaBinding.EditPackagesDialog.cs:
 * gtk-gui/MonoDevelop.ValaBinding.OutputOptionsPanel.cs:
 * gtk-gui/MonoDevelop.ValaBinding.CodeGenerationPanel.cs:
 * gtk-gui/MonoDevelop.ValaBinding.GeneralOptionsPanel.cs: Flush.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* ValaBinding.mdp: Flush project format changes.

2009-01-12  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/EditPackagesDialog.cs: Move package list population into idle handler.

2009-01-12  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ProjectPackage.cs:
	* Project/ProjectPackageCollection.cs: Use relative path 
	for project package references.
