@@ -1,3 +1,12 @@
+2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Project/ValaProject.cs: Changed the way execution handlers
+	  work. We are not using platform ids anymore. Instead, we use
+	  command strings when looking for execution handlers.
+	  IExecutionHandlerFactory has been removed and now everything
+	  is handled by IExecutionHandler, which has a new CanExecute
+	  method. This model is more simple and more generic.
+
 2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* ValaLanguageBinding.cs: Ordinal compare.
